--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,5 @@
 name: pip_clients_roles
-version: "1.0.0"
-author: Sergey Seroukhov <seroukhov@gmail.com>
+version: "1.0.1"
 description: Clients for User roles microservice for Pip.Services in Dart
 homepage: https://github.com/pip-services-users/pip-clients-roles-dart
 
@@ -15,6 +14,7 @@ dependencies:
   pip_services3_rpc: ">=1.0.2 <2.0.0"
   pip_services3_grpc: ">=1.0.0 <2.0.0"
   pip_services3_container: ">=1.0.0 <2.0.0"
+  pip_services_roles: ">=1.0.0 <2.0.0"
   http: "^0.12.0"
   angel_framework: ^2.1.1
 
